<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_alarm"
    android:layout_height="match_parent"
    tools:context=".AlarmOnActive">



    <TextView
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white"
        android:id="@+id/faq_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_faq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="30sp"
            android:textColor="@color/green"
            android:fontFamily="@font/ptsans_bold"
            android:id="@+id/text_random_number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_random1"
            />

        <TextView
            android:fontFamily="@font/ptsans_bold"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:id="@+id/text_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            />
        <TextView
            android:textColor="@color/green"
            android:fontFamily="@font/ptsans_bold"
            android:textSize="30sp"
            android:id="@+id/text_random_number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_random2"
            />

    </LinearLayout>

    <EditText
        android:layout_margin="30sp"
        android:layout_gravity="center"
        android:id="@+id/et_result"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/et_result"
        android:importantForAutofill="no" />
    <Button
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop_alarm"
        />

</LinearLayout>